--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-Hello World!
+<! doctype html>
+<html>
+
+<!-- this is the head info for the browser -->
+<head>
+<title>My First Page</title> 
+</head>  
+
+<!--this is the stuff the user will see-->
+<body>
+<h1>My First Page</h1>  
+<p>This is my awesome first page. What do you think of it?</p>
+  
+</body>
+  
+</html>
+
