--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <!-- this is the head info for the browser -->
 <head>
-<title>My First Page</title> 
+<title>My Home Page/title> 
 </head>  
 
 <!--this is the stuff the user will see-->
 <body>
 <h1>My First Page</h1>  
-<p>This is my awesome first page. What do you think of it?</p>
+<p>About Me...</p>
   
 </body>
   
