--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <!-- this is the head info for the browser -->
 <head>
-<title>My Home Page/title> 
+<title>My Home Page</title> 
 </head>  
 
 <!--this is the stuff the user will see-->
