--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 
 <!--this is the stuff the user will see-->
 <body>
-<h1>My First Page</h1>  
-<p>About Me...</p>
-  
+<h1>My Home Page Page</h1>  
+<p>Links</p>
+<a href="portfolio.html" title="See my portfolio">My Portfolio</a>
+<a href="resume.html" title="See my resume">My Resume</a>
+<a href="contact.html" title="Contact me">Contact Me</a>
 </body>
   
 </html>
