--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
 <body>
 <h1>Contact Me</h1>
 <p>I'll be in touch with you shortly!</p>
+<a href="index.html" title="back home">Home</a>
 <body>
 
 </html>
