--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 <!--this is the stuff the user will see-->
 <body>
 <h1>My Home Page Page</h1>  
-<p>Links</p>
+<p>Welcome!</p>
 <a href="portfolio.html" title="See my portfolio">My Portfolio</a>
+<br>
 <a href="resume.html" title="See my resume">My Resume</a>
+<br>
 <a href="contact.html" title="Contact me">Contact Me</a>
 </body>
   
