--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
 
 <body>
 <h1>My Portfolio</h1>
-<p>Samples of my work</p>
+<p>Here's what I've been working on...</p>
 <a href="index.html" title="back home">Home</a>
 <body>
 
