--- a/resume.html
+++ b/resume.html
@@ -7,7 +7,7 @@
 
 <body>
 <h1>My Resume</h1>
-<p>My credentials</p>
+<p>Here are my credentials</p>
 <a href="index.html" title="back home">Home</a>
 <body>
 
