--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <!--this is the stuff the user will see-->
 <body>
-<h1>My Home Page Page</h1>  
+<h1>My Home Page</h1>  
 <p>Welcome!</p>
 <a href="portfolio.html" title="See my portfolio">My Portfolio</a>
 <br>
