--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
 <h1>My Home Page</h1>  
 <p>Welcome!</p>
+<br>
+<h2>Links</h2>
 <a href="portfolio.html" title="See my portfolio">My Portfolio</a>
 <br>
 <a href="resume.html" title="See my resume">My Resume</a>
