--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <!-- this is the head info for the browser -->
 <head>
 <title>My Home Page</title> 
+<link rel="stylesheet" href="./styles/mystyle.css">
 </head>  
 
 <!--this is the stuff the user will see-->
