--- a/portfolio.html
+++ b/portfolio.html
@@ -9,6 +9,10 @@
 <body>
 <h1>My Portfolio</h1>
 <p>Here's what I've been working on...</p>
+
+<img src="http://drive.google.com/file/d/0B8hLx0OAAlcSZzF0OXhnUzB0NlU/edit?usp=sharing" alt="portfolio piece 1">
+
+
 <a href="index.html" title="back home">Home</a>
 <body>
 
