--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
 <body>
 <h1>Contact Me</h1>
 <p>I'll be in touch with you shortly!</p>
+<a href="mailto://meen6336@gmail.com">Email me!</a>
 <a href="index.html" title="back home">Home</a>
 <body>
 
