--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,8 @@
 <h1>My Portfolio</h1>
 <p>Here's what I've been working on...</p>
 
-<img src="https://drive.google.com/uc?id=0B8hLx0OAAlcSZzF0OXhnUzB0NlU" alt="portfolio piece 1">
+<img src="https://drive.google.com/uc?id=0B8hLx0OAAlcSZzF0OXhnUzB0NlU" alt="photomontage">
+<img src="https://drive.google.com/uc?id=0B8hLx0OAAlcSOXZtaTA0Y2haM1k" alt="sequential images">
 
 <a href="index.html" title="back home">Home</a>
 <body>
