--- a/portfolio.html
+++ b/portfolio.html
@@ -7,13 +7,15 @@
 </head>
 
 <body>
-<h1>My Portfolio</h1>
-<p>Here's what I've been working on...</p>
+  <h1>My Portfolio</h1>
+  <p>Here's what I've been working on...</p>
 
-<img src="https://drive.google.com/uc?id=0B8hLx0OAAlcSZzF0OXhnUzB0NlU" alt="photomontage">
-<img src="https://drive.google.com/uc?id=0B8hLx0OAAlcSOXZtaTA0Y2haM1k" alt="sequential images">
+  <section id="gallery">
+    <img src="https://drive.google.com/uc?id=0B8hLx0OAAlcSZzF0OXhnUzB0NlU" alt="photomontage">
+    <img src="https://drive.google.com/uc?id=0B8hLx0OAAlcSOXZtaTA0Y2haM1k" alt="sequential images">
+  </section>
 
-<a href="index.html" title="back home">Home</a>
+  <a href="index.html" title="back home">Home</a>
 <body>
 
 </html>
