--- a/contact.html
+++ b/contact.html
@@ -1,16 +1,89 @@
-<! doctype html>
-<html>
-
+<html lang="en">
 <head>
-<title>Contact Me</title>
+<meta charset="utf-8">
+<title>Feedback Form</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="Feedback form for My Site">
+<meta name="author" content="thomesoni@gmail.com">
+
+<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
+
 <link rel="stylesheet" href="./styles/mystyle.css">
+<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+<!--[if lt IE 9]>
+	<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+	<script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+<![endif]-->
 </head>
 
 <body>
-<h1>Contact Me</h1>
-<p>I'll be in touch with you shortly!</p>
-<a href="mailto://meen6336@gmail.com">Email me!</a>
 <a href="index.html" title="back home">Home</a>
+<div class="container">
+	<div class="row">
+		<header class="col-md-12">
+			<h1>Contact Me</h1>
+		</header>
+	</div>
+
+	<div class="row">
+		<article class="col-md-12">
+			<p class="message"></p>
+			<form action="http://www.tcnj.edu/~selvanm1/jsonpform2email.php">
+				<div class="form-group">
+					<label>From</label>
+					<input class="form-control" type="text" name="from"  placeholder="Enter email">
+				</div>
+				<div class="form-group">
+					<label>Subject</label>
+					<input class="form-control" type="text" name="subject"  placeholder="Enter Subject">
+				</div>
+				<div class="form-group">
+					<label>Message</label>
+					<textarea class="form-control" name="message" placeholder="Enter Message"></textarea>
+				</div>
+				<input type="submit" class="btn btn-default" name="submit" value="Submit">
+			</form>
+
+		</article>
+	</div>
+
+	<div class="row">
+		<footer></footer>
+	</div>
+</div>
 <body>
+
+<script src="https://code.jquery.com/jquery.js"></script>
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+
+<script>
+/* jsonp form to email function */
+$('form').submit(function() {
+  var url = $(this).attr("action");
+  var params = $(this).serialize();
+  
+  $.getJSON(url + '?' + params + "&callback=?", function(data) {
+   
+	switch(data[0].status){
+		case 'success':
+			$('.message').addClass("text-success").html('Thank you, <strong>' + data[0].from + '</strong>, for sending us feedback!');
+			$('form')[0].reset();
+			break;
+		case 'invalid email':
+			$('.message').removeClass("text-success").addClass("text-danger").html('Please provide a valid email address!');
+			break;
+		case 'failed to send':
+			$('.message').removeClass("text-success").addClass("text-danger").html('Failed to send email.');
+			break;
+	}
+  });
+  return false;
+});
+
+</script>
+
 
 </html>
