--- a/index.html
+++ b/index.html
@@ -4,7 +4,20 @@
 <!-- this is the head info for the browser -->
 <head>
 <title>My Home Page</title> 
-<link rel="stylesheet" href="./styles/mystyle.css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="Feedback form for My Site">
+<meta name="author" content="thomesoni@gmail.com">
+
+<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
+
+<!--<link rel="stylesheet" href="./styles/mystyle.css">-->
+
+<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+<!--[if lt IE 9]>
+	<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+	<script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+<![endif]-->
 </head>  
 
 <!--this is the stuff the user will see-->
@@ -44,6 +57,12 @@
          <a href="contact.html" title="Contact me">Contact Me</a>           
      </footer>
   </div>
+  
+<script src="https://code.jquery.com/jquery.js"></script>
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+
 </body>
   
 </html>
