--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Feedback Form</title>
+<title>Contact Me</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="Feedback form for My Site">
 <meta name="author" content="thomesoni@gmail.com">
