--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
 
-<!--<link rel="stylesheet" href="./styles/mystyle.css">-->
+<link rel="stylesheet" href="./styles/mystyle.css">
 
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
