--- a/portfolio.html
+++ b/portfolio.html
@@ -24,8 +24,8 @@
   <p>Here's what I've been working on...</p>
 
   <section id="gallery">
-    <img src="https://drive.google.com/uc?id=0B8hLx0OAAlcSZzF0OXhnUzB0NlU" alt="photomontage">
-    <img src="https://drive.google.com/uc?id=0B8hLx0OAAlcSOXZtaTA0Y2haM1k" alt="sequential images">
+    <img src="https://drive.google.com/uc?id=0B8hLx0OAAlcSZzF0OXhnUzB0NlU" alt="photomontage" class="img-responsive">
+    <img src="https://drive.google.com/uc?id=0B8hLx0OAAlcSOXZtaTA0Y2haM1k" alt="sequential images" class="img-responsive">
   </section>
 
   <a href="index.html" title="back home">Home</a>
