--- a/index.html
+++ b/index.html
@@ -35,21 +35,27 @@
      </nav>
          
          <article>
+           <div class="row">
              <header>
                  <h2>About Me</h2>
              </header>
              <section>
                  <p>Welcome! I'm a sophomore Interactive Multimedia major and Marketing minor at the College of New Jersey.</p>
              </section>
-             <section>
+           </div>
+           <div class="row">
+             <section class="col-md-8">
              	<h2>Experience</h2>
              </section>
-             <section>
+             <section class="col-md-4">
              	<h2>Skills</h2>
              </section>
+            </div>
+            <div class="row">
              <section>
              	<h2>Honors/Awards</h2>
              </section>
+            </div>
          </article>
      </div>
      
