--- a/portfolio.html
+++ b/portfolio.html
@@ -4,8 +4,8 @@
 <head>
 <title>My Portfolio</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="Feedback form for My Site">
-<meta name="author" content="thomesoni@gmail.com">
+<meta name="description" content="Portfolio">
+<meta name="author" content="meena6336@gmail.com">
 
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
 
@@ -20,15 +20,52 @@
 </head>
 
 <body>
-  <h1>My Portfolio</h1>
-  <p>Here's what I've been working on...</p>
+<div class="container">
+ <header class="row"> 
+         <h1>Meena (logo img?)</h1> 
+     </header>
+     
+     <nav>
+         <ul>
+           <li class=" col-xs-4"><a href="index.html" title="About Me">About Me</a></li>
+           <li class=" col-xs-4"><a href="contact.html" title="Contact me">Contact Me</a></li>
+         </ul>
+     </nav>
 
-  <section id="gallery">
-    <img src="https://drive.google.com/uc?id=0B8hLx0OAAlcSZzF0OXhnUzB0NlU" alt="photomontage" class="img-responsive">
-    <img src="https://drive.google.com/uc?id=0B8hLx0OAAlcSOXZtaTA0Y2haM1k" alt="sequential images" class="img-responsive">
-  </section>
-
-  <a href="index.html" title="back home">Home</a>
+  <article>
+           <div class="row">
+             <header>
+                 <h2>My Work</h2>
+             </header>
+             <section>
+                 <p>Here are some of my selected works. </p>
+             </section>
+           </div>
+           <div class="row">
+             <section class="col-md-8">
+             	<h2>Graphic Art/h2>
+             	  <h3>Typography</h3>
+             	  <h3>Logos</h3>
+             </section>
+             <section class="col-md-4">
+             	<h2>Digital Art</h2>
+             </section>
+            </div>
+            <div class="row">
+             <section>
+             	<h2>Fine Arts</h2>
+             	  <h3>Black and White</h3>
+             	  <h3>Colored Pencils</h3>
+             	  <h3>Paintings</h3>
+             </section>
+            </div>
+         </article>
+     </div>
+     
+     <footer id="page-footer" class="row"> 
+         <p>meena6336@gmail.com</p>        
+     </footer>
+</div> <!--end ocntainer-->
   
 <script src="https://code.jquery.com/jquery.js"></script>
 
