--- a/portfolio.html
+++ b/portfolio.html
@@ -42,6 +42,12 @@
              </section>
            </div>
            <div class="row">
+           
+           <!--sample image urls
+           <img src="https://drive.google.com/uc?id=0B8hLx0OAAlcSZzF0OXhnUzB0NlU" alt="photomontage" class="img-responsive">
+    	   <img src="https://drive.google.com/uc?id=0B8hLx0OAAlcSOXZtaTA0Y2haM1k" alt="sequential images" class="img-responsive">
+           -->
+           
              <section class="col-md-8">
              	<h2>Graphic Art/h2>
              	  <h3>Typography</h3>
