--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <title>Contact Me</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="Feedback form for My Site">
-<meta name="author" content="thomesoni@gmail.com">
+<meta name="author" content="meena6336@gmail.com">
 
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
 
@@ -19,8 +19,18 @@
 </head>
 
 <body>
-<a href="index.html" title="back home">Home</a>
 <div class="container">
+     <header class="row"> 
+         <h1>Meena (logo img?)</h1> 
+     </header>
+     
+     <nav>
+         <ul>
+           <li class=" col-xs-4"><a href="portfolio.html" title="See my portfolio">My Portfolio</a></li>
+           <li class=" col-xs-4"><a href="index.html" title="About Me">About Me</a></li>
+         </ul>
+     </nav>
+     
 	<div class="row">
 		<header class="col-md-12">
 			<h1>Contact Me</h1>
