--- a/portfolio.html
+++ b/portfolio.html
@@ -51,10 +51,15 @@
              <section class="col-md-8">
              	<h2>Graphic Art/h2>
              	  <h3>Typography</h3>
+             	  	img src="https://drive.google.com/uc?id=0B8hLx0OAAlcSQ05hUXlreGctd2M" alt="palatino type poster" class="img-responsive">
+             	  	img src="https://drive.google.com/uc?id=0B8hLx0OAAlcSTGFJYldsMVdiYW8" alt="new years card" class="img-responsive">
+             	  	img src="https://drive.google.com/uc?id=0B8hLx0OAAlcSamFMcTZRUWNXMVU" alt="seasons greetings card" class="img-responsive">
              	  <h3>Logos</h3>
              </section>
              <section class="col-md-4">
              	<h2>Digital Art</h2>
+             	       img src="https://drive.google.com/uc?id=0B8hLx0OAAlcSSlRId0dMT3dkTnM" alt="personal space montage" class="img-responsive">
+             	       img src="https://drive.google.com/uc?id=0B8hLx0OAAlcSYzVQTngwaDJjeWs" alt="guitar and birds" class="img-responsive">
              </section>
             </div>
             <div class="row">
