--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
 <!--this is the stuff the user will see-->
 <body>
 <div class="container">
-     <header class="row"> 
-         <h1>Meena (logo img?)</h1> 
-     </header>
-     
-     <nav>
-         <ul>
-           <li class=" col-xs-4"><a href="portfolio.html" title="See my portfolio">My Portfolio</a></li>
-           <li class=" col-xs-4"><a href="contact.html" title="Contact me">Contact Me</a></li>
-         </ul>
-     </nav>
-         
+     <div class="row">
+     	<header> 
+         	<h1>Meena (logo img?)</h1> 
+     	</header>
+     	<nav>
+           <ul>
+             <li class=" col-xs-4"><a href="portfolio.html" title="See my portfolio">My Portfolio</a></li>
+             <li class=" col-xs-4"><a href="contact.html" title="Contact me">Contact Me</a></li>
+           </ul>
+	 </nav>
+     </div><!--end row about me anf welcome para-->    
          <article>
            <div class="row">
              <header>
@@ -42,7 +42,7 @@
              <section>
                  <p>Welcome! I'm a sophomore Interactive Multimedia major and Marketing minor at the College of New Jersey.</p>
              </section>
-           </div>
+           </div> <!--end row about me anf welcome para-->
            <div class="row">
              <section class="col-md-8">
              	<h2>Experience</h2>
