--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
      	</header>
      	<nav>
            <ul>
+             <li class=" col-xs-4"><a href="resume.html" title="About Me">About Me</a></li>
              <li class=" col-xs-4"><a href="portfolio.html" title="See my portfolio">My Portfolio</a></li>
              <li class=" col-xs-4"><a href="contact.html" title="Contact me">Contact Me</a></li>
            </ul>
