--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
      	</header>
      	<nav>
            <ul>
+             <li class=" col-xs-4"><a href="index.html" title="Home Page">Home</a></li>
              <li class=" col-xs-4"><a href="resume.html" title="About Me">About Me</a></li>
-             <li class=" col-xs-4"><a href="portfolio.html" title="See my portfolio">My Portfolio</a></li>
-             <li class=" col-xs-4"><a href="contact.html" title="Contact me">Contact Me</a></li>
+             <li class=" col-xs-4"><a href="portfolio.html" title="See my portfolio">Portfolio</a></li>
+             <li class=" col-xs-4"><a href="contact.html" title="Contact me">Contact</a></li>
            </ul>
 	 </nav>
      </div><!--end row about me anf welcome para-->    
