--- a/portfolio.html
+++ b/portfolio.html
@@ -27,8 +27,10 @@
      
      <nav>
          <ul>
-           <li class=" col-xs-4"><a href="index.html" title="About Me">About Me</a></li>
-           <li class=" col-xs-4"><a href="contact.html" title="Contact me">Contact Me</a></li>
+           <li class=" col-xs-4"><a href="index.html" title="Home Page">Home</a></li>
+           <li class=" col-xs-4"><a href="resume.html" title="About Me">About Me</a></li>
+           <li class=" col-xs-4"><a href="portfolio.html" title="See my portfolio">Portfolio</a></li>
+           <li class=" col-xs-4"><a href="contact.html" title="Contact me">Contact</a></li>
          </ul>
      </nav>
 
