--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
            <li class=" col-xs-4"><a href="index.html" title="Home Page">Home</a></li>
            <li class=" col-xs-4"><a href="resume.html" title="About Me">About Me</a></li>
            <li class=" col-xs-4"><a href="portfolio.html" title="See my portfolio">Portfolio</a></li>
-           <li class=" col-xs-4"><a href="contact.html" title="Contact me">Contact</a></li>
+           <li class=" current-page col-xs-4"><a href="contact.html" title="Contact me">Contact</a></li>
          </ul>
      </nav>
      
