--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
            -->
            
              <section class="col-md-8">
-             	<h2>Graphic Art/h2>
+             	<h2>Graphic Art</h2>
              	  <h3>Typography</h3>
              	  	<img src="https://drive.google.com/uc?id=0B8hLx0OAAlcSQ05hUXlreGctd2M" alt="palatino type poster" class="img-responsive">
              	  	<img src="https://drive.google.com/uc?id=0B8hLx0OAAlcSTGFJYldsMVdiYW8" alt="new years card" class="img-responsive">
@@ -69,7 +69,6 @@
              	<h2>Fine Arts</h2>
              	  <h3>Black and White</h3>
              	  	<img src="https://drive.google.com/uc?id=0B8hLx0OAAlcSOFh6ZUE0TldXMzA" alt="big heads classical still life" class="img-responsive">
-             	  https://drive.google.com/file/d/0B8hLx0OAAlcSOFh6ZUE0TldXMzA/edit?usp=sharing
              	  <h3>Colored Pencils</h3>
              	  	<img src="https://drive.google.com/uc?id=0B8hLx0OAAlcSMGRBWnVEREtmems" alt="prismacolor birds" class="img-responsive">
              	 	<img src="https://drive.google.com/uc?id=0B8hLx0OAAlcSSUpyd1dzR215SE0" alt="shells" class="img-responsive">
