--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
      	<nav>
            <ul>
              <li class=" current-page col-xs-2"><a href="index.html" title="Home Page">Home</a></li>
-             <li class=" col-xs-2"><a href="resume.html" title="About Me">About Me</a></li>
+             <li class=" btn btn-default col-xs-2"><a href="resume.html" title="About Me">About Me</a></li>
              <li class=" col-xs-2"><a href="portfolio.html" title="See my portfolio">Portfolio</a></li>
              <li class=" col-xs-2"><a href="contact.html" title="Contact me">Contact</a></li>
            </ul>
