--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
 
 <!--blueimp image gallery -->
-<link rel="stylesheet" href="css/blueimp-gallery.min.css">
+<link rel="stylesheet" href="http://www.tcnj.edu/~selvanm1/css/blueimp-gallery.min.css">
 
 <link rel="stylesheet" href="./styles/mystyle.css">
 
@@ -92,7 +92,7 @@
 <!-- Latest compiled and minified JavaScript -->
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
 
-<script src="js/blueimp-gallery.min.js"></script>
+<script src="http://www.tcnj.edu/~selvanm1/js/blueimp-gallery.min.js"></script>
 
 <script>
 document.getElementById('links').onclick = function (event) {
