--- a/portfolio.html
+++ b/portfolio.html
@@ -76,6 +76,9 @@
 		 </div>
 	    </section>
 	    
+	    </div> <!--end div id="links" all gallery images inside this div-->
+	    <div id="links">
+	    
 	    <section>
 		 <h3>Fine Arts: Black and White</h3>
 		 <div class="row">
