--- a/portfolio.html
+++ b/portfolio.html
@@ -66,7 +66,7 @@
 		 <h3>Typography</h3>
 		 <div id="type" class="row">
 		   <!--link to google drive url-->
-		    <a href="https://drive.google.com/uc?id=0B8hLx0OAAlcSQ05hUXlreGctd2M" title="Type Poster" data-gallery="#bluimp-gallery-type">
+		    <a href="https://drive.google.com/uc?id=0B8hLx0OAAlcSQ05hUXlreGctd2M" title="Type Poster" data-gallery="#blueimp-gallery-type">
 		        <!--link to image thumbnail-->
 		        <img src="https://drive.google.com/uc?id=0B8hLx0OAAlcSQ05hUXlreGctd2M" alt="palatino type poster" width="100px" height="100px">
 		    </a>
