--- a/portfolio.html
+++ b/portfolio.html
@@ -9,8 +9,8 @@
 
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
 
-<!--blueimp image gallery 
-<link rel="stylesheet" href="http://www.tcnj.edu/~selvanm1/css/blueimp-gallery.min.css">-->
+<!--blueimp image gallery -->
+<link rel="stylesheet" href="http://www.tcnj.edu/~selvanm1/css/blueimp-gallery.min.css">
 
 <!--blueimp jqueary plug-in --> 
 <link rel="stylesheet" href="http://www.tcnj.edu/~selvanm1/blueimp-gallery.jquery.json">
@@ -48,7 +48,7 @@
              </header>
            </div> <!--end row header-->
            
-           <div class="row"> <!--blueimp image gallery test-->
+           <div> <!--blueimp image gallery test-->
            <!-- The Gallery as lightbox dialog, should be a child element of the document body -->
 		  <div id="blueimp-gallery" class="blueimp-gallery blueimp-gallery-controls">
 		    <div class="slides"></div>
