--- a/portfolio.html
+++ b/portfolio.html
@@ -134,7 +134,7 @@
 <script src="http://www.tcnj.edu/~selvanm1/js/blueimp-gallery.min.js"></script>
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-<script src="js/jquery.blueimp-gallery.min.js"></script>
+<script src="http://www.tcnj.edu/~selvanm1/js/jquery.blueimp-gallery.min.js"></script>
 
 <script>
 document.getElementById('links').onclick = function (event) {
