--- a/portfolio.html
+++ b/portfolio.html
@@ -12,8 +12,8 @@
 <!--blueimp image gallery -->
 <link rel="stylesheet" href="http://www.tcnj.edu/~selvanm1/css/blueimp-gallery.min.css">
 
-<!--blueimp jqueary plug-in --> 
-<link rel="stylesheet" href="http://www.tcnj.edu/~selvanm1/blueimp-gallery.jquery.json">
+<!--blueimp jquery plug-in  
+<link rel="stylesheet" href="http://www.tcnj.edu/~selvanm1/blueimp-gallery.jquery.json"> -->
 
 <!--<link rel="stylesheet" href="./styles/mystyle.css"> -->
 
@@ -64,23 +64,20 @@
 	  
              <section>
 		 <h3>Typography</h3>
-		 <div id="type" class="row">
+		 <div class="row">
 		   <!--link to google drive url-->
-		    <a href="https://drive.google.com/uc?id=0B8hLx0OAAlcSQ05hUXlreGctd2M" title="Type Poster" data-gallery="#blueimp-gallery-type">
+		    <a href="https://drive.google.com/uc?id=0B8hLx0OAAlcSQ05hUXlreGctd2M" title="Type Poster">
 		        <!--link to image thumbnail-->
 		        <img src="https://drive.google.com/uc?id=0B8hLx0OAAlcSQ05hUXlreGctd2M" alt="palatino type poster" width="100px" height="100px">
 		    </a>
-		    <a href="https://drive.google.com/uc?id=0B8hLx0OAAlcSTGFJYldsMVdiYW8" title="Cheers!" data-gallery>
+		    <a href="https://drive.google.com/uc?id=0B8hLx0OAAlcSTGFJYldsMVdiYW8" title="Cheers!">
 		        <img src="https://drive.google.com/uc?id=0B8hLx0OAAlcSTGFJYldsMVdiYW8" alt="new years card" width="100px" height="100px">
 		    </a>
-		    <a href="https://drive.google.com/uc?id=0B8hLx0OAAlcSamFMcTZRUWNXMVU" title="Happy Holidays!" data-gallery>
+		    <a href="https://drive.google.com/uc?id=0B8hLx0OAAlcSamFMcTZRUWNXMVU" title="Happy Holidays!">
 		        <img src="https://drive.google.com/uc?id=0B8hLx0OAAlcSamFMcTZRUWNXMVU" alt="seasons greetings card" width="100px" height="100px">
 		    </a>
 		 </div>
 	    </section>
-	    
-	    </div> <!--end div id="links" all gallery images inside this div-->
-	    <div id="links">
 	    
 	    <section>
 		 <h3>Fine Arts: Black and White</h3>
@@ -133,8 +130,10 @@
 
 <script src="http://www.tcnj.edu/~selvanm1/js/blueimp-gallery.min.js"></script>
 
+<!--
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="http://www.tcnj.edu/~selvanm1/js/jquery.blueimp-gallery.min.js"></script>
+-->
 
 <script>
 document.getElementById('links').onclick = function (event) {
