--- a/portfolio.html
+++ b/portfolio.html
@@ -48,6 +48,16 @@
              </header>
            </div> <!--end row header-->
            
+           <!-- The Gallery as inline carousel, can be positioned anywhere on the page -->
+	<div id="blueimp-gallery-carousel" class="blueimp-gallery blueimp-gallery-carousel">
+	 	<div class="slides"></div>
+    		<h3 class="title"></h3>
+    		<a class="prev">‹</a>
+    		<a class="next">›</a>
+    		<a class="play-pause"></a>
+    		<ol class="indicator"></ol>
+	</div>
+           
            <div> <!--blueimp image gallery test-->
            <!-- The Gallery as lightbox dialog, should be a child element of the document body -->
 		  <div id="blueimp-gallery" class="blueimp-gallery blueimp-gallery-controls">
@@ -144,6 +154,16 @@ document.getElementById('links').onclick = function (event) {
         links = this.getElementsByTagName('a');
     blueimp.Gallery(links, options);
 };
+</script>
+
+<script>
+blueimp.Gallery(
+    document.getElementById('links').getElementsByTagName('a'),
+    {
+        container: '#blueimp-gallery-carousel',
+        carousel: true
+    }
+);
 </script>
 
 </body>
