--- a/portfolio.html
+++ b/portfolio.html
@@ -57,6 +57,27 @@
     		<a class="play-pause"></a>
     		<ol class="indicator"></ol>
 	</div>
+	
+	 <div id="links">
+
+		   <!--link to google drive url-->
+		    <a href="https://drive.google.com/uc?id=0B8hLx0OAAlcSQ05hUXlreGctd2M" title="Type Poster">
+		        <!--link to image thumbnail-->
+		        <img src="https://drive.google.com/uc?id=0B8hLx0OAAlcSQ05hUXlreGctd2M" alt="palatino type poster" width="100px" height="100px">
+		    </a>
+		    <a href="https://drive.google.com/uc?id=0B8hLx0OAAlcSTGFJYldsMVdiYW8" title="Cheers!">
+		        <img src="https://drive.google.com/uc?id=0B8hLx0OAAlcSTGFJYldsMVdiYW8" alt="new years card" width="100px" height="100px">
+		    </a>
+		    <a href="https://drive.google.com/uc?id=0B8hLx0OAAlcSamFMcTZRUWNXMVU" title="Happy Holidays!">
+		        <img src="https://drive.google.com/uc?id=0B8hLx0OAAlcSamFMcTZRUWNXMVU" alt="seasons greetings card" width="100px" height="100px">
+		    </a>
+	    
+	</div>
+	
+	
+	
+	
+	
            
            <div> <!--blueimp image gallery test-->
            <!-- The Gallery as lightbox dialog, should be a child element of the document body -->
