--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
          
      
      <footer id="page-footer" class="row"> 
-         <p>href="mailto:meena6336@gmail.com</p>        
+         <p><a href="mailto:meena6336@gmail.com></p>        
      </footer>
 </div> <!--end container-->
   
