--- a/portfolio.html
+++ b/portfolio.html
@@ -63,18 +63,23 @@
 	   <section>
 		 <h3>colored Pencil Works</h3>
 		 <div class="row">
-		 
-		    <a href="https://drive.google.com/uc?id=0B8hLx0OAAlcSX1Z3Rm9RR09xM0U" title="The Big Heads">
-		        <img src="https://drive.google.com/uc?id=0B8hLx0OAAlcSazFKemVrT3FEV1k" alt="the big heads classical still life" >
+
+		    <a href="https://drive.google.com/uc?id=0B8hLx0OAAlcSd2pGVFRLYW9kUE0" title="Birds in Prismacolor">
+		        <img src="https://drive.google.com/uc?id=0B8hLx0OAAlcSYk9sRE9sU0FKSzA" alt="Birds in Prismacolor" >
 		    </a>
 
-		    <a href="https://drive.google.com/uc?id=0B8hLx0OAAlcSYTRyVF9xLU9mRkU" title="Starfish and Shells">
-		        <img src="https://drive.google.com/uc?id=0B8hLx0OAAlcSbkZnYUhXZ2szTU0" alt="starfish and shells drawing" >
+		    <a href="https://drive.google.com/uc?id=0B8hLx0OAAlcSSVNpcWdOVjdCMG8" title="coffee">
+		        <img src="https://drive.google.com/uc?id=0B8hLx0OAAlcSX0MwNVVXRV9HY1E" alt="coffee drawing" >
 		    </a>
 
-		    <a href="https://drive.google.com/uc?id=0B8hLx0OAAlcScmNXeE00U01VQkk" title="Flower with Jug">
-		        <img src="https://drive.google.com/uc?id=0B8hLx0OAAlcSUnF1cXRWOFFJbUk" alt="flower with jug drawing" >
+		    <a href="https://drive.google.com/uc?id=0B8hLx0OAAlcSZHI0NVQwaDRBRTQ" title="Birds Trio">
+		        <img src="https://drive.google.com/uc?id=0B8hLx0OAAlcSMVg4UnlQcG91Yjg" alt="Birds Trio" >
 		    </a>
+
+		    <a href="https://drive.google.com/uc?id=0B8hLx0OAAlcSVWIzTkt4Q2Z4REk" title="Shells">
+		        <img src="https://drive.google.com/uc?id=0B8hLx0OAAlcSWWxOSVQ1LXdRN3M" alt="Shells drawing" >
+		    </a>
+		    
 	    </section>
 	  
 	  
