--- a/portfolio.html
+++ b/portfolio.html
@@ -60,10 +60,13 @@
 	
 	  <div id="links">
 	  
-	   <section>
-		 <h3>Typography</h3>
+	   <div class="panel panel-default">
+	   
+		<div class="panel-heading">
+    		   <h3 class="panel-title">Typography</h3>
+  		</div>
 		 <!--<div class="row">-->
-
+		<div class="panel-body">
 		    <a href="https://drive.google.com/uc?id=0B8hLx0OAAlcSV3BsRlhQbzhjZjg" title="Palatino Type Poster">
 		        <img src="https://drive.google.com/uc?id=0B8hLx0OAAlcSNFdjM2JVOHF3TUE" alt="Palatino Type Poster" >
 		    </a>
@@ -95,8 +98,9 @@
 		    <a href="https://drive.google.com/uc?id=0B8hLx0OAAlcSYUJfSVE3dGVsZGM" title="Seasons Greetings card">
 		        <img src="https://drive.google.com/uc?id=0B8hLx0OAAlcSVEg1Q0tHMExySWs" alt="Seasons Greetings card" >
 		    </a>
+		 </div>
 		 <!--</div> <!--end image row-->   
-	    </section>
+	    </div>
 	   
 	   <section>
 		 <h3>Digital Montages</h3>
@@ -129,7 +133,7 @@
 		    <a href="https://drive.google.com/uc?id=0B8hLx0OAAlcST1dNN3ZOdmtzNlU" title="The Eat Well Plate 2">
 		        <img src="https://drive.google.com/uc?id=0B8hLx0OAAlcSTlo1d0o3Rl8yY0U" alt="The Eat Well Plate 2" >
 		    </a>
-h
+
 		    <a href="https://drive.google.com/uc?id=0B8hLx0OAAlcScVdHVEdtT2lZSTA" title="The Eat Well Plate 3">
 		        <img src="https://drive.google.com/uc?id=0B8hLx0OAAlcSS3hqWFVxUnhRRUk" alt="The Eat Well Plate 3" >
 		    </a>
