--- a/portfolio.html
+++ b/portfolio.html
@@ -31,12 +31,13 @@
 <header class="row"> 
 	<h1>Meena (logo img?)</h1> 
 </header>
+ 
      
-<nav class="row">
-  <ul>
-    <li class=" col-xs-2"><a href="index.html" title="About Me">Home</a></li>
-    <li class=" col-xs-2"><a href="portfolio.html" title="My Portfolio">Portfolio</a></li>
-    <li class=" col-xs-2"><a href="contact.html" title="Contact Me">Contact</a></li>
+<nav>
+  <ul class="nav nav-pills" >
+    <li><a href="index.html" title="About Me">Home</a></li>
+    <li class="active"><a href="portfolio.html" title="My Portfolio">Portfolio</a></li>
+    <li><a href="contact.html" title="Contact Me">Contact</a></li>
   </ul>
 </nav>
 
