--- a/portfolio.html
+++ b/portfolio.html
@@ -34,10 +34,10 @@
  
      
 <nav>
-  <ul class="nav nav-pills" >
-    <li><a href="index.html" title="About Me">Home</a></li>
-    <li class="active"><a href="portfolio.html" title="My Portfolio">Portfolio</a></li>
-    <li><a href="contact.html" title="Contact Me">Contact</a></li>
+  <ul class="nav nav-pills col-md-offset-6" >
+    <li class="col-md-2"><a href="index.html" title="About Me">Home</a></li>
+    <li class="col-md-2 active"><a href="portfolio.html" title="My Portfolio">Portfolio</a></li>
+    <li class="col-md-2"><a href="contact.html" title="Contact Me">Contact</a></li>
   </ul>
 </nav>
 
