--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
 <!--blueimp jquery plug-in  
 <link rel="stylesheet" href="http://www.tcnj.edu/~selvanm1/blueimp-gallery.jquery.json"> -->
 
-<!--<link rel="stylesheet" href="./styles/mystyle.css"> -->
+<link rel="stylesheet" href="./styles/mystyle.css">
 
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
