--- a/portfolio.html
+++ b/portfolio.html
@@ -26,17 +26,19 @@
 <body>
 <div class="container">
 
-<header class="row"> 
-	<h2>Meena (logo img?)</h1> 
-</header>
+<div class="page-header">
+  <h1>Meena's Portfolio <small>Meena Selvanathan</small></h1>
+</div>
  
      
-<nav>
-  <ul class="nav nav-pills col-md-offset-6" >
+<nav class="nav nav-pills navbar-right navbar-fixed-top" role="navigation">
+ <div class="container">
+  <ul>
     <li><a href="index.html" title="About Me">Home</a></li>
     <li class="active"><a href="portfolio.html" title="My Portfolio">Portfolio</a></li>
     <li><a href="contact.html" title="Contact Me">Contact</a></li>
   </ul>
+ </div>
 </nav>
 
            <div class="row">
@@ -239,9 +241,9 @@
 	
  </div> <!--end blue imp gallery test-->
 
-    <footer id="page-footer" class="row"> 
+<footer  class="row"> 
         <p><a href="mailto:meena6336@gmail.com"></p>        
-    </footer>
+</footer>
      
 </div> <!--end container-->
   
