--- a/portfolio.html
+++ b/portfolio.html
@@ -31,14 +31,13 @@
 </div>
  
      
-<nav class="nav nav-pills navbar-right navbar-fixed-top" role="navigation">
- <div class="container">
-  <ul>
+<nav>
+  <ul class="nav nav-pills">
     <li><a href="index.html" title="About Me">Home</a></li>
     <li class="active"><a href="portfolio.html" title="My Portfolio">Portfolio</a></li>
     <li><a href="contact.html" title="Contact Me">Contact</a></li>
   </ul>
- </div>
+
 </nav>
 
            <div class="row">
@@ -241,7 +240,7 @@
 	
  </div> <!--end blue imp gallery test-->
 
-<footer  class="row"> 
+<footer> 
         <p><a href="mailto:meena6336@gmail.com"></p>        
 </footer>
      
