--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
 </div>
  
      
-<nav>
+<nav class="col-md-push-9">
   <ul class="nav nav-pills">
     <li><a href="index.html" title="About Me">Home</a></li>
     <li class="active"><a href="portfolio.html" title="My Portfolio">Portfolio</a></li>
