--- a/portfolio.html
+++ b/portfolio.html
@@ -27,12 +27,12 @@
 <div class="container">
 
 <div class="page-header">
-  <h1>Meena's Portfolio <small>Meena Selvanathan</small></h1>
+  <h1><img src="https://drive.google.com/uc?id=0B8hLx0OAAlcSMjFvQ1h6cHlDQXM" alt="Meena's Portfolio" > <small>Meena Selvanathan</small></h1>
 </div>
  
      
-<nav class="col-md-push-9">
-  <ul class="nav nav-pills">
+<nav>
+  <ul class="nav nav-pills col-md-push-9">
     <li><a href="index.html" title="About Me">Home</a></li>
     <li class="active"><a href="portfolio.html" title="My Portfolio">Portfolio</a></li>
     <li><a href="contact.html" title="Contact Me">Contact</a></li>
@@ -160,7 +160,7 @@
 	   
 	   <div class="panel panel-default">
 		<div class="panel-heading">
-    		   <h3 class="panel-title">colored Pencil Works</h3>
+    		   <h3 class="panel-title">Colored Pencil Works</h3>
   		</div><!--end panel heading-->
 	   <div class="panel-body">
 		    <a href="https://drive.google.com/uc?id=0B8hLx0OAAlcSd2pGVFRLYW9kUE0" title="Birds in Prismacolor">
