--- a/portfolio.html
+++ b/portfolio.html
@@ -26,10 +26,11 @@
 <body>
 <div class="container">
 
-<div class="page-header">
-  <h1><img src="https://drive.google.com/uc?id=0B8hLx0OAAlcSMjFvQ1h6cHlDQXM" alt="Meena's Portfolio" > <small>Meena Selvanathan</small></h1>
+<div class="page-header col-md-push-8">
+  <h1><img src="https://drive.google.com/uc?id=0B8hLx0OAAlcSMjFvQ1h6cHlDQXM" 
+  width="60px" height="50px" class="img-responsive"
+  alt="Meena's Portfolio" > <small>Meena Selvanathan</small></h1>
 </div>
- 
      
 <nav>
   <ul class="nav nav-pills col-md-push-9">
