--- a/portfolio.html
+++ b/portfolio.html
@@ -26,24 +26,28 @@
 <body>
 <div class="container">
 
-<div class="page-header col-md-push-8">
-  <h1><img src="https://drive.google.com/uc?id=0B8hLx0OAAlcSMjFvQ1h6cHlDQXM" 
-  width="60px" height="50px" class="img-responsive"
-  alt="Meena's Portfolio" > <small>Meena Selvanathan</small></h1>
-</div>
-     
-<nav>
-  <ul class="nav nav-pills col-md-push-9">
-    <li><a href="index.html" title="About Me">Home</a></li>
-    <li class="active"><a href="portfolio.html" title="My Portfolio">Portfolio</a></li>
-    <li><a href="contact.html" title="Contact Me">Contact</a></li>
-  </ul>
+		
+	<div class="row"></div>
+		<div class="page-header col-md-6">
+		  <h1><img src="https://drive.google.com/uc?id=0B8hLx0OAAlcSMjFvQ1h6cHlDQXM" 
+		  width="60px" height="50px" class="img-responsive"
+		  alt="Meena's Portfolio" > <small>Meena Selvanathan</small></h1>
+		</div>
+		     
+		<nav class="col-md-6">
+		  <ul class="nav nav-pills col-md-push-9">
+		    <li><a href="index.html" title="About Me">Home</a></li>
+		    <li class="active"><a href="portfolio.html" title="My Portfolio">Portfolio</a></li>
+		    <li><a href="contact.html" title="Contact Me">Contact</a></li>
+		  </ul>
+		
+		</nav>
+	</div> <!--end header and nav row-->
 
-</nav>
 
            <div class="row">
              <header>
-                 <h1>My Work</h1>
+                 <h2>My Work</h1>
              </header>
            </div> <!--end row header-->
 
