--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
 <div class="container">
 
 		
-	<div class="row"></div>
+	<div class="row">
 		<div class="page-header col-md-6">
 		  <h1><img src="https://drive.google.com/uc?id=0B8hLx0OAAlcSMjFvQ1h6cHlDQXM" 
 		  width="60px" height="50px" class="img-responsive"
@@ -35,7 +35,7 @@
 		</div>
 		     
 		<nav class="col-md-6">
-		  <ul class="nav nav-pills col-md-push-9">
+		  <ul class="nav nav-pills">
 		    <li><a href="index.html" title="About Me">Home</a></li>
 		    <li class="active"><a href="portfolio.html" title="My Portfolio">Portfolio</a></li>
 		    <li><a href="contact.html" title="Contact Me">Contact</a></li>
