--- a/portfolio.html
+++ b/portfolio.html
@@ -28,13 +28,13 @@
 
 		
 	<div class="row">
-		<div class="page-header col-md-6">
+		<div class="page-header col-md-8">
 		  <h1><img src="https://drive.google.com/uc?id=0B8hLx0OAAlcSMjFvQ1h6cHlDQXM" 
 		  width="60px" height="50px" class="img-responsive"
-		  alt="Meena's Portfolio" > <small>Meena Selvanathan</small></h1>
+		  alt="Meena's Portfolio" > Meena Selvanathan</h1>
 		</div>
 		     
-		<nav class="col-md-6">
+		<nav class="col-md-4">
 		  <ul class="nav nav-pills">
 		    <li><a href="index.html" title="About Me">Home</a></li>
 		    <li class="active"><a href="portfolio.html" title="My Portfolio">Portfolio</a></li>
