--- a/portfolio.html
+++ b/portfolio.html
@@ -28,13 +28,13 @@
 
 		
 	<div class="row">
-		<div class="page-header col-md-8">
+		<div class="page-header col-sm-8">
 		  <h1><img src="https://drive.google.com/uc?id=0B8hLx0OAAlcSMjFvQ1h6cHlDQXM" 
-		  width="60px" height="50px" class="img-responsive"
+		  width="60px" height="50px" class="img-responsive" 
 		  alt="Meena's Portfolio" > Meena Selvanathan</h1>
 		</div>
 		     
-		<nav class="col-md-4">
+		<nav class="col-sm-4">
 		  <ul class="nav nav-pills">
 		    <li><a href="index.html" title="About Me">Home</a></li>
 		    <li class="active"><a href="portfolio.html" title="My Portfolio">Portfolio</a></li>
@@ -244,11 +244,15 @@
 	</div> <!--end div id="links" all gallery images inside this div-->
 	
  </div> <!--end blue imp gallery test-->
-
+ 
+ 
+<div class="row>"
 <footer> 
         <p><a href="mailto:meena6336@gmail.com"></p>        
 </footer>
-     
+ </div> 
+ 
+ 
 </div> <!--end container-->
   
 <script src="https://code.jquery.com/jquery.js"></script>
