--- a/portfolio.html
+++ b/portfolio.html
@@ -26,11 +26,11 @@
 <body>
 <div class="container">
 
-		
+	
 	<div class="row">
 		<div class="page-header col-sm-8">
-		  <h1><img src="https://drive.google.com/uc?id=0B8hLx0OAAlcSMjFvQ1h6cHlDQXM" 
-		  width="60px" height="50px" class="img-responsive" 
+		  <h1><img src="https://drive.google.com/uc?id=0B8hLx0OAAlcSOFhBU085MjBtSGs" 
+		  class="img-responsive" 
 		  alt="Meena's Portfolio" > Meena Selvanathan</h1>
 		</div>
 		     
