--- a/portfolio.html
+++ b/portfolio.html
@@ -28,13 +28,13 @@
 
 	
 	<div class="row">
-		<div class="page-header col-sm-8">
+		<div class="page-header col-sm-8 col-xs-12">
 		  <h1><img src="https://drive.google.com/uc?id=0B8hLx0OAAlcSOFhBU085MjBtSGs" 
 		  class="img-responsive" 
-		  alt="Meena's Portfolio" > Meena Selvanathan</h1>
+		  alt="Meena's Portfolio" ></h1>
 		</div>
 		     
-		<nav class="col-sm-4">
+		<nav class="col-sm-4 col-xs-12">
 		  <ul class="nav nav-pills">
 		    <li><a href="index.html" title="About Me">Home</a></li>
 		    <li class="active"><a href="portfolio.html" title="My Portfolio">Portfolio</a></li>
