--- a/portfolio.html
+++ b/portfolio.html
@@ -34,11 +34,11 @@
 		  alt="Meena's Portfolio" ></h1>
 		</div>
 		     
-		<nav class="col-xs-6">
+		<nav>
 		  <ul class="nav nav-pills">
-		    <li><a href="index.html" title="About Me">Home</a></li>
-		    <li class="active"><a href="portfolio.html" title="My Portfolio">Portfolio</a></li>
-		    <li><a href="contact.html" title="Contact Me">Contact</a></li>
+		    <li class="col-xs-1"><a href="index.html" title="About Me">Home</a></li>
+		    <li class="active col-xs-1"><a href="portfolio.html" title="My Portfolio">Portfolio</a></li>
+		    <li class="col-xs-1"><a href="contact.html" title="Contact Me">Contact</a></li>
 		  </ul>
 		
 		</nav>
