--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 
 	<div class="row">
-		<div class="page-header  col-xs-6">
+		<div class="page-header  col-xs-12 col-md-6">
 		  <h1><img src="https://drive.google.com/uc?id=0B8hLx0OAAlcSOFhBU085MjBtSGs" 
 		  class="img-responsive" 
 		  alt="Meena's Portfolio" ></h1>
@@ -37,9 +37,9 @@
 		     
 		<nav>
 		  <ul class="nav nav-pills">
-		    <li class="col-xs-2"><a href="index.html" title="About Me">Home</a></li>
-		    <li class="active col-xs-2"><a href="portfolio.html" title="My Portfolio">Portfolio</a></li>
-		    <li class="col-xs-2"><a href="contact.html" title="Contact Me">Contact</a></li>
+		    <li class="active col-xs-3 col-md-1"><a href="index.html" title="About Me">Home</a></li>
+		    <li class="col-xs-3 col-md-1"><a href="portfolio.html" title="My Portfolio">Portfolio</a></li>
+		    <li class="col-xs-3 col-md-1"><a href="contact.html" title="Contact Me">Contact</a></li>
 		  </ul>
 		
 		</nav>
