--- a/portfolio.html
+++ b/portfolio.html
@@ -27,8 +27,9 @@
 <div class="container">
 
 	
+
 	<div class="row">
-		<div class="page-header  col-xs-6">
+		<div class="page-header  col-xs-12 col-md-6">
 		  <h1><img src="https://drive.google.com/uc?id=0B8hLx0OAAlcSOFhBU085MjBtSGs" 
 		  class="img-responsive" 
 		  alt="Meena's Portfolio" ></h1>
@@ -36,20 +37,13 @@
 		     
 		<nav>
 		  <ul class="nav nav-pills">
-		    <li class="col-xs-2"><a href="index.html" title="About Me">Home</a></li>
-		    <li class="active col-xs-2"><a href="portfolio.html" title="My Portfolio">Portfolio</a></li>
-		    <li class="col-xs-2"><a href="contact.html" title="Contact Me">Contact</a></li>
+		    <li class=" col-xs-3 col-md-1"><a href="index.html" title="About Me">Home</a></li>
+		    <li class=" active col-xs-3 col-md-1"><a href="portfolio.html" title="My Portfolio">Portfolio</a></li>
+		    <li class="col-xs-3 col-md-1"><a href="contact.html" title="Contact Me">Contact</a></li>
 		  </ul>
 		
 		</nav>
 	</div> <!--end header and nav row-->
-
-
-           <div class="row">
-             <header>
-                 <h2>My Work</h1>
-             </header>
-           </div> <!--end row header-->
 
 
 
@@ -246,12 +240,13 @@
  </div> <!--end blue imp gallery test-->
  
  
-<div class="row>"
-<footer> 
-        <p><a href="mailto:meena6336@gmail.com"></p>        
-</footer>
- </div> 
- 
+<div class="panel panel-default">
+  <div class="panel-body">
+    	<footer> 
+        	<p><a href="mailto:meena6336@gmail.com"></p>        
+	</footer>
+  </div>
+</div>
  
 </div> <!--end container-->
   
