--- a/index.html
+++ b/index.html
@@ -179,13 +179,13 @@
 
 
  
-<div class="panel panel-default">
+<footer class="panel panel-default">
   <div class="panel-body">
-    	<footer> 
-        	<p><a href="mailto:meena6336@gmail.com"></p>        
-	</footer>
+
+        	<p><a href="mailto:meena6336@gmail.com">meena6336@gmail.com</a></p>        
+
   </div>
-</div>
+</footer>
  
  
      
