--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
      
 	<div class="row">
 		<header class="col-md-8">
-			<h1>Contact Me</h1>
+			<h3>Contact Me</h3>
 		</header>
 	</div>
 
@@ -77,13 +77,13 @@
 
 
 
-<div class="panel panel-default">
+
+ 
+<footer class="panel panel-default">
   <div class="panel-body">
-    	<footer> 
-        	<p><a href="mailto:meena6336@gmail.com"></p>        
-	</footer>
+        <p><a href="mailto:meena6336@gmail.com">meena6336@gmail.com</a></p>        
   </div>
-</div>
+</footer>
  
  
 </div>
