--- a/portfolio.html
+++ b/portfolio.html
@@ -240,13 +240,11 @@
  </div> <!--end blue imp gallery test-->
  
  
-<div class="panel panel-default">
+<footer class="panel panel-default">
   <div class="panel-body">
-    	<footer> 
-        	<p><a href="mailto:meena6336@gmail.com"></p>        
-	</footer>
+        <p><a href="mailto:meena6336@gmail.com">meena6336@gmail.com</a></p>        
   </div>
-</div>
+</footer>
  
 </div> <!--end container-->
   
